test-cases/final-dump/error_mode.exp
Error detected during type checking of module(s) error_mode, error_mode.tree
[93mfinal-dump/error_mode.wybe:3:34: Explicit specification of current type tree,
  it is recommended to specify type as _
[0m[93mfinal-dump/error_mode.wybe:3:54: Explicit specification of current type tree,
  it is recommended to specify type as _
[0m[91mfinal-dump/error_mode.wybe:8:40: Calling test proc error_mode.tree.left<0> in a normal (total) context
[0m[91mfinal-dump/error_mode.wybe:9:30: Calling test proc error_mode.tree.right<0> in a normal (total) context
[0m
